@@ -36,9 +36,9 @@ public:
 	
 	Row( const LHS_TYPE& lhs) : nr( lhs.nrow() ), nc( lhs.ncol() ) {}
 	
-	inline int operator[]( int index ) const {
-		return Rcpp::internal::get_line( index, nr) + 1;
-	}
+	// inline int operator[]( int index ) const {
+	// 	return Rcpp::internal::get_line( index, nr) + 1;
+	// }
 	inline int operator()( int i, int j ) const {
 		return i + 1 ;
 	}
